--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-	  <div class="header-email">denis@den.com</div><div class="header-phone"> +380999992244</div>
+	  <a class="header-email" href="mailto:denis@den.com">denis@den.com</a><a class="header-phone" href="tel:+380999992244">+38 099 999 22 44</a>
 	  </div>
     </header>
 
@@ -24,6 +24,9 @@
     <section class="intro">
 	 <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+	  <figure class="user-image">
+		<img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+	  </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,10 +37,12 @@
     <section class="portfolio">
 	 <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+	<figure class="project-image">
+		<img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+	</figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
-
+		<a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
 	  </div>
@@ -45,7 +50,7 @@
 
     <footer class="page-footer">
 	<div class="container">
-      <div class="footer-email">denis@den.com</div><div class="footer-phone"> +380999992244</div>
+      <a class="footer-email" href="mailto:denis@den.com">denis@den.com</a><a class="footer-phone" href="tel:+380999992244">+38 099 999 22 44</a>
 	  </div>
     </footer>
   </body>
